added more projects

--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@
 
 		<!-- PROJECTPAGE -->
 		<div class="project_main_headline">
-			<h1>Solo-Projects</h1>
+			<h1>Projects</h1>
 		</div>
 		<div class="project_main_hr_container">
 			<hr class="hr_first" />
+		</div>
+		<div class="projects_main">
+			<span class="badge bg-light text-dark" id="solo">Solo-Projects</span>
 		</div>
 		<div class="projects_main">
 			<!-- tokenchecker -->
@@ -63,9 +66,6 @@
 					<a href="https://github.com/xNaCly/tokenchecker-website" class="btn btn-primary">Github</a>
 					<a href="https://discordtoken.vercel.app/" class="btn btn-primary">Website</a>
 				</div>
-				<!-- <div class="card-footer">
-					<small class="text-muted">Solo-Project</small>
-				</div> -->
 			</div>
 			<!-- passwordgen -->
 			<div class="card text-dark bg-light mb-3" style="width: 15rem">
@@ -76,9 +76,6 @@
 					<a href="https://github.com/xNaCly/password-gen" class="btn btn-primary">Github</a>
 					<a href="https://password-gen-xnacly.vercel.app/" class="btn btn-primary">Website</a>
 				</div>
-				<!-- <div class="card-footer">
-					<small class="text-muted">Solo-Project</small>
-				</div> -->
 			</div>
 			<!-- semikurs -->
 			<div class="card text-dark bg-light mb-3" style="width: 15rem">
@@ -89,9 +86,6 @@
 					<a href="https://github.com/xNaCly/semikurs-code" class="btn btn-primary">Github</a>
 					<a href="https://semikurs-code.vercel.app/" class="btn btn-primary">Website</a>
 				</div>
-				<!-- <div class="card-footer">
-					<small class="text-muted">Solo-Project</small>
-				</div> -->
 			</div>
 			<!-- better-issues -->
 			<div class="card text-dark bg-light mb-3" style="width: 15rem">
@@ -102,22 +96,59 @@
 					<a href="https://github.com/xNaCly/better-issues" class="btn btn-primary">Github</a>
 					<a href="https://xnacly.github.io/better-issues/" class="btn btn-primary">Website</a>
 				</div>
-				<!-- <div class="card-footer">
-					<small class="text-muted">Solo-Project</small>
-				</div> -->
+			</div>
+
+			<!-- instagram api -->
+			<div class="card text-dark bg-light mb-3" style="width: 15rem">
+				<img src="assets/github-com-xNaCly-InstagramAPIwrapper.png" class="card-img-top" alt="..." />
+				<div class="card-header">InstagramAPIwrapper</div>
+				<div class="card-body">
+					<p class="card-text">Instagram web-API wrapper</p>
+					<a href="https://github.com/xNaCly/InstagramAPIwrapper" class="btn btn-primary">Github</a>
+					<!-- <a href="#" class="btn btn-primary">Website</a> -->
+				</div>
+			</div>
+
+			<!-- 4chanclone -->
+			<div class="card text-dark bg-light mb-3" style="width: 15rem">
+				<img src="assets/github-com-better-image-board.png" class="card-img-top" alt="..." />
+				<div class="card-header">4chan clone</div>
+				<div class="card-body">
+					<p class="card-text">selfmade 4chan clone</p>
+					<a href="https://github.com/better-image-board" class="btn btn-primary">Github</a>
+					<!-- <a href="#" class="btn btn-primary">Website</a> -->
+				</div>
+			</div>
+		</div>
+		<div class="projects_main">
+			<span class="badge bg-light text-dark" id="contribution">Contributions</span>
+		</div>
+		<div class="projects_main">
+			<!-- mnJSf -->
+			<div class="card text-dark bg-light mb-3" style="width: 15rem">
+				<img src="assets/github-com-Flam3rboy-missing-native-JS-functions.png" class="card-img-top" alt="..." />
+				<div class="card-header">Missing-native-JS-functions</div>
+				<div class="card-body">
+					<p class="card-text">base lib for every JS project</p>
+					<a href="https://github.com/Flam3rboy/missing-native-JS-functions" class="btn btn-primary"
+						>Github</a
+					>
+					<!-- <a href="#" class="btn btn-primary">Website</a> -->
+				</div>
+			</div>
+
+			<!-- discord -->
+			<div class="card text-dark bg-light mb-3" style="width: 15rem">
+				<img src="assets/github-com-discord-open-source.png" class="card-img-top" alt="..." />
+				<div class="card-header">opensource discord clone</div>
+				<div class="card-body">
+					<p class="card-text">improved discord clone</p>
+					<a href="https://github.com/discord-open-source" class="btn btn-primary">Github</a>
+					<!-- <a href="#" class="btn btn-primary">Website</a> -->
+				</div>
 			</div>
 		</div>
 		<!-- PROJECTPAGE-end -->
-
-		<!-- PROJECTPAGE2 -->
-		<div class="project_main_headline">
-			<h1>Contributions</h1>
-		</div>
-		<div class="project_main_hr_container">
-			<hr class="hr_first" />
-		</div>
-
-		<!--  PROJECTPAGE2-end -->
 
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
