--- a/about.html
+++ b/about.html
@@ -35,13 +35,13 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="index.html">Home</a>
+							<a class="nav-link" aria-current="page" href="index.html">Home</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" aria-current="page" href="projects.html">Projects</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" aria-current="page" href="about.html">About</a>
+							<a class="nav-link active" aria-current="page" href="about.html">About</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a
