finished about structure

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 	<body>
 		<!-- NAVBAR -->
 
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="#">XNACLY</a>
 				<button
@@ -70,6 +70,113 @@
 		</nav>
 		<!-- NAVBAR-end -->
 
+		<!-- main-content -->
+		<div class="container" id="main_">
+			<div class="row">
+				<div class="card border-light mb-3 col" id="about_card">
+					<div class="card-header">About</div>
+					<div class="card-body text-dark">
+						<p class="card-text">
+							Im a 17 year old german student and am interested in technologies and programming. I enjoy
+							procrastinating, exercising and listening to music.
+						</p>
+					</div>
+				</div>
+
+				<div class="card border-light mb-3 col" id="about_card">
+					<div class="card-header">Skillset</div>
+					<ul class="list-group list-group-flush">
+						<li class="list-group-item">
+							<img
+								src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/typescript/typescript.png"
+								alt=""
+							/>
+							<img
+								src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png"
+								alt=""
+							/>
+							<img
+								src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/css/css.png"
+								alt=""
+							/>
+							<img
+								src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/html/html.png"
+								alt=""
+							/>
+						</li>
+						<li class="list-group-item">
+							<img
+								src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/python/python.png"
+								alt=""
+							/>
+						</li>
+						<li class="list-group-item">
+							<img
+								src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/git/git.png"
+								alt=""
+							/>
+							<img
+								src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/bash/bash.png"
+								alt=""
+							/>
+							<img
+								src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/visual-studio-code/visual-studio-code.png"
+								alt=""
+							/>
+							<img
+								src="https://raw.githubusercontent.com/github/explore/master/topics/linux/linux.png"
+								alt=""
+							/>
+						</li>
+						<li class="list-group-item">
+							<img
+								src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/nodejs/nodejs.png"
+								alt=""
+							/>
+							<img
+								src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/react/react.png"
+								alt=""
+							/>
+							<img
+								src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/express/express.png"
+								alt=""
+							/>
+							<img
+								src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/bootstrap/bootstrap.png"
+								alt=""
+							/>
+						</li>
+					</ul>
+					<!-- <div class="card-body text-dark">
+						<p class="card-text">Frameworks:</p>
+					</div> -->
+				</div>
+			</div>
+			<div class="row">
+				<div class="card border-light mb-3 col" style="max-width: 40rem; max-height: 15rem">
+					<img
+						src="https://github-readme-stats.codestackr.vercel.app/api?username=xnacly&show_icons=true&hide_border=true&count_private=true&include_all_commits=true"
+						alt=""
+						class="card-img-top"
+					/>
+					<div class="card-body text-dark">
+						<p class="card-text"></p>
+					</div>
+				</div>
+				<div class="card border-light mb-3 col" style="max-width: 40rem; max-height: 15rem">
+					<img
+						src="https://github-readme-stats.vercel.app/api/top-langs/?username=xnacly&layout=compact&hide_border=true"
+						alt=""
+						class="card-img-top"
+					/>
+					<div class="card-body text-dark">
+						<p class="card-text"></p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- main-content-end -->
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
 			integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
