--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 	<body>
 		<!-- NAVBAR -->
 
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="#">XNACLY</a>
 				<button
