--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
 			crossorigin="anonymous"
 		></script>
 		<script>
-			document.getElementById("about_me").innerText = `Im a ${
+			document.getElementById("about_me").innerText = `I'm an ${
 				new Date().getFullYear() - 2003
-			} year old german student and am interested in technologies and programming.
+			} year old german student and I am interested in technologies and programming.
 			I enjoy procrastinating, exercising and listening to music.`;
 		</script>
 	</body>
