made minor layout and text changes

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 		<script>
 			document.getElementById("about_me").innerText = `I'm an ${
 				new Date().getFullYear() - 2003
-			} year old german student and I am interested in technologies and programming.
+			} year old student from germany and I am interested in technologies and programming.
 			I enjoy procrastinating, exercising and listening to music.`;
 		</script>
 	</body>
