added newest project

--- a/projects.html
+++ b/projects.html
@@ -76,6 +76,15 @@
 		</div>
 		<div class="container">
 			<div class="row">
+				<!-- netflixrpc -->
+				<div class="card text-dark bg-light mb-3 col" style="width: 15rem">
+					<img src="assets/github-com-xNaCly-netflix-rpc.png" class="card-img-top" alt="..." />
+					<div class="card-header">Netflix-Discord integration</div>
+					<div class="card-body">
+						<p class="card-text">reverse engineered discord-netflix integration</p>
+						<a href="https://github.com/xNaCly/netflix-rpc" class="btn btn-primary">Github</a>
+					</div>
+				</div>
 				<!-- tokenchecker -->
 				<div class="card text-dark bg-light mb-3 col" style="width: 15rem">
 					<img src="assets/discordtoken-vercel-app-.png" class="card-img-top" alt="..." />
