extended description (semikurs-code-card)

--- a/projects.html
+++ b/projects.html
@@ -112,7 +112,7 @@
 					<img src="assets/semikurs-code-vercel-app-.png" class="card-img-top" alt="..." />
 					<div class="card-header">Quiz app</div>
 					<div class="card-body">
-						<p class="card-text">educational game</p>
+						<p class="card-text">educational game to teach simple data sec</p>
 						<a href="https://github.com/xNaCly/semikurs-code" class="btn btn-primary">Github</a>
 						<a href="https://semikurs-code.vercel.app/" class="btn btn-primary">Website</a>
 					</div>
