updated to include new projects

--- a/projects.html
+++ b/projects.html
@@ -76,12 +76,24 @@
 		</div>
 		<div class="container">
 			<div class="row">
+				<!-- betterforum -->
+				<div class="card text-dark bg-light mb-3 col" style="width: 15rem">
+					<img src="assets/betterforum-vercel-app-.png" class="card-img-top" alt="..." />
+					<div class="card-header">Betterforum</div>
+					<div class="card-body">
+						<p class="card-text">a basic forum</p>
+						<a href="https://github.com/xNaCly/betterforum" class="btn btn-primary">Github</a>
+						<a href="https://betterforum.vercel.app/" class="btn btn-primary">Showcase</a>
+					</div>
+				</div>
+			</div>
+			<div class="row">
 				<!-- netflixrpc -->
 				<div class="card text-dark bg-light mb-3 col" style="width: 15rem">
 					<img src="assets/github-com-xNaCly-netflix-rpc.png" class="card-img-top" alt="..." />
 					<div class="card-header">Netflix-Discord integration</div>
 					<div class="card-body">
-						<p class="card-text">reverse engineered discord-netflix integration</p>
+						<p class="card-text">private discord-netflix integration</p>
 						<a href="https://github.com/xNaCly/netflix-rpc" class="btn btn-primary">Github</a>
 					</div>
 				</div>
@@ -105,18 +117,18 @@
 						<a href="https://password-gen-xnacly.vercel.app/" class="btn btn-primary">Website</a>
 					</div>
 				</div>
-			</div>
-			<div class="row">
 				<!-- semikurs -->
 				<div class="card text-dark bg-light mb-3 col" style="width: 15rem">
 					<img src="assets/semikurs-code-vercel-app-.png" class="card-img-top" alt="..." />
 					<div class="card-header">Quiz app</div>
 					<div class="card-body">
-						<p class="card-text">educational game to teach simple data sec</p>
+						<p class="card-text">ed game to teach simple data sec</p>
 						<a href="https://github.com/xNaCly/semikurs-code" class="btn btn-primary">Github</a>
 						<a href="https://semikurs-code.vercel.app/" class="btn btn-primary">Website</a>
 					</div>
 				</div>
+			</div>
+			<div class="row">
 				<!-- better-issues -->
 				<div class="card text-dark bg-light mb-3 col" style="width: 15rem">
 					<img src="assets/xnacly-github-io-better-issues-.png" class="card-img-top" alt="..." />
@@ -127,8 +139,6 @@
 						<a href="https://xnacly.github.io/better-issues/" class="btn btn-primary">Website</a>
 					</div>
 				</div>
-			</div>
-			<div class="row">
 				<!-- instagram api -->
 				<div class="card text-dark bg-light mb-3 col" style="width: 15rem">
 					<img src="assets/github-com-xNaCly-InstagramAPIwrapper.png" class="card-img-top" alt="..." />
@@ -139,7 +149,6 @@
 						<!-- <a href="#" class="btn btn-primary">Website</a> -->
 					</div>
 				</div>
-
 				<!-- 4chanclone -->
 				<div class="card text-dark bg-light mb-3 col" style="width: 15rem">
 					<img src="assets/github-com-better-image-board.png" class="card-img-top" alt="..." />
@@ -151,6 +160,7 @@
 					</div>
 				</div>
 			</div>
+			<div class="row"></div>
 		</div>
 		<div class="project_main_hr_container">
 			<button type="button" disabled class="btn btn-primary" id="contribution">
@@ -173,17 +183,19 @@
 						<a href="https://github.com/Flam3rboy/missing-native-JS-functions" class="btn btn-primary"
 							>Github</a
 						>
-						<!-- <a href="#" class="btn btn-primary">Website</a> -->
+						<a href="https://flam3rboy.github.io/missing-native-JS-functions/" class="btn btn-primary"
+							>Website</a
+						>
 					</div>
 				</div>
 
 				<!-- discord -->
 				<div class="card text-dark bg-light mb-3 col" style="width: 15rem">
 					<img src="assets/github-com-discord-open-source.png" class="card-img-top" alt="..." />
-					<div class="card-header">opensource discord clone</div>
+					<div class="card-header">fosscord</div>
 					<div class="card-body">
 						<p class="card-text">improved discord clone</p>
-						<a href="https://github.com/discord-open-source" class="btn btn-primary">Github</a>
+						<a href="https://github.com/fosscord" class="btn btn-primary">Github</a>
 						<!-- <a href="#" class="btn btn-primary">Website</a> -->
 					</div>
 				</div>
