--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	</head>
 	<body>
 		You are being redirected to xnacly's portfolio, if that doesn't work, click
-		<a href="https://github.com">here</a>
+		<a href="https://portfolio-xnacly.vercel.app/">here</a>
 		<script>
 			setTimeout(() => {
-				window.location.href = "https://github.com";
+				window.location.href = "https://portfolio-xnacly.vercel.app/";
 			}, 2000);
 		</script>
 	</body>
