--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 	<body>
 		You are being redirected to xnacly's portfolio, if that doesn't work, click
 		<a href="https://portfolio-xnacly.vercel.app/">here</a>
+		<p><a href="./html.html">html-porfolio</a></p>
 		<script>
 			setTimeout(() => {
 				window.location.href = "https://portfolio-xnacly.vercel.app/";
-			}, 2000);
+			}, 3000);
 		</script>
 	</body>
 </html>
