updated href to portfolio

--- a/html.html
+++ b/html.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="theme-color" content="#ac4142" />
+		<meta name="description" content="xnacly's portfolio" />
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" />
 		<title>Portfolio</title>
@@ -14,7 +16,7 @@
 				<div class="main5 margin">
 					<a href="https://github.com/xNaCly">Github</a>
 					<a href="mailto:xnacly@gmail.com">E-mail</a>
-					<a href="http://portfolio-xnacly.vercel.app">Portfolio</a>
+					<a href="http://xnacly.me">Portfolio</a>
 				</div>
 				<img class="avatar" src="https://avatars0.githubusercontent.com/u/47723417" alt="github_avatar" />
 
