--- a/html.html
+++ b/html.html
@@ -14,18 +14,16 @@
 		<div class="main">
 			<div class="main2">
 				<div class="main5 margin">
-					<a href="https://github.com/xNaCly">Github</a>
-					<a href="mailto:xnacly@gmail.com">E-mail</a>
-					<a href="http://xnacly.me">Portfolio</a>
+					<span>[<a href="https://github.com/xNaCly">Github</a>]</span>
+					<span>[<a href="mailto:xnacly@gmail.com">E-mail</a>]</span>
+					<span>[<a href="http://xnacly.me">Portfolio</a>]</span>
 				</div>
 				<img class="avatar" src="https://avatars0.githubusercontent.com/u/47723417" alt="github_avatar" />
 
 				<h1>About:</h1>
-				<p>
-					Hi, I'm Matteo, an 18-year-old student from Germany and I'm interested in technologies and
-					programming.
-				</p>
-				<p>I enjoy procrastinating, exercising and listening to music.</p>
+				<p class="p_">Hi, I'm Matteo, an 18-year-old student from Germany.</p>
+				<p class="p_">I'm interested in technologies and programming.</p>
+				<p class="p_">I enjoy procrastinating, exercising and listening to music.</p>
 				<div class="main4">
 					<div class="main3">
 						<h1>Skills:</h1>
@@ -41,7 +39,7 @@
 							<li class="list_el">Express.js</li>
 							<li class="list_el">git</li>
 							<li class="list_el">bash</li>
-							<li class="list_el">several Linux distros</li>
+							<li class="list_el">Linux</li>
 						</ul>
 					</div>
 					<div class="main3">
@@ -71,6 +69,9 @@
 							<li class="list_el"><a href="https://github.com/xNaCly/semikurs-code">semikurs code</a></li>
 						</ul>
 					</div>
+				</div>
+				<div class="main3">
+					<span> [<a href="http://">Source</a>] </span>
 				</div>
 			</div>
 		</div>
