--- a/index.html
+++ b/index.html
@@ -6,13 +6,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Portfolio</title>
 	</head>
-	<body>
-		You are being redirected to xnacly's portfolio, if that doesn't work, click
-		<a href="https://portfolio-xnacly.vercel.app/">here</a>
-		<p><a href="./html.html">html-porfolio</a></p>
+	<body style="font-family: monospace; font-size: 15pt; background-color: lightgray">
+		<div style="display: flex; align-items: center; justify-content: center; flex-direction: column">
+			<div style="margin-bottom: 1rem">
+				<span
+					>You are being redirected to xnacly's portfolio
+					<span style="font-style: italic; color: grey">(https://xnacly.me/)</span>, if that doesn't work,
+					click</span
+				>
+				<span><a style="color: black" href="https://xnacly.me/">here</a>...</span>
+			</div>
+			<span style="color: gray">[<a style="color: black" href="./html.html">html-porfolio</a>]</span>
+		</div>
 		<script>
 			setTimeout(() => {
-				window.location.href = "https://portfolio-xnacly.vercel.app/";
+				window.location.href = "https://xnacly.me/";
 			}, 3000);
 		</script>
 	</body>
