--- a/html.html
+++ b/html.html
@@ -6,9 +6,87 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="theme-color" content="#ac4142" />
 		<meta name="description" content="xnacly's portfolio" />
-		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" />
 		<title>Portfolio</title>
+		<style>
+			:root {
+				--background: #151515;
+				--text: #cccccc;
+				--accent: #e5b567;
+			}
+			body {
+				background-color: var(--background);
+				color: var(--text);
+				font-family: "JetBrains Mono";
+				margin-bottom: 2rem;
+			}
+			a {
+				color: var(--accent);
+			}
+			.avatar {
+				border: 0.25rem solid var(--accent);
+				border-radius: 50%;
+				width: 10rem;
+			}
+			.main {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+				width: 100%;
+			}
+			.main2 {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+				width: 50%;
+				text-align: center;
+				word-wrap: break-word;
+			}
+			.main3 {
+				text-align: start;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				width: 100%;
+				word-wrap: break-word;
+			}
+			.main4 {
+				display: flex;
+			}
+			.main3 > h1,
+			.main3 > ul {
+				margin: 0;
+				margin-top: 0.25rem;
+				margin-bottom: 0.5rem;
+			}
+
+			.list_el {
+				font-style: italic;
+			}
+			.margin {
+				margin: 1rem;
+			}
+			.main5 {
+				display: flex;
+			}
+			.p_ {
+				margin: 0;
+			}
+			@media only screen and (max-width: 1000px) {
+				.main4 {
+					flex-direction: column;
+					margin-bottom: 1rem;
+				}
+				.main5 {
+					flex-direction: column;
+				}
+				.main5 > span {
+					margin: 0.25rem;
+				}
+			}
+		</style>
 	</head>
 	<body>
 		<div class="main">
