--- a/html.html
+++ b/html.html
@@ -6,7 +6,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="theme-color" content="#ac4142" />
 		<meta name="description" content="xnacly's portfolio" />
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" />
 		<title>Portfolio</title>
 		<style>
 			:root {
@@ -17,7 +16,7 @@
 			body {
 				background-color: var(--background);
 				color: var(--text);
-				font-family: "JetBrains Mono";
+				font-family: "Courier New", monospace;
 				margin-bottom: 2rem;
 			}
 			a {
