--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Portfolio</title>
 	</head>
-	<body style="font-family: monospace; font-size: 15pt; background-color: lightgray">
+	<body style="font-family: 'Courier New', monospace; font-size: 15pt; background-color: lightgray">
 		<div style="display: flex; align-items: center; justify-content: center; flex-direction: column">
 			<div style="margin-bottom: 1rem">
 				<span
