added new about me

--- a/html.html
+++ b/html.html
@@ -101,6 +101,8 @@
 				<p class="p_">Hi, I'm Matteo, an 18-year-old student from Germany.</p>
 				<p class="p_">I'm interested in technologies and programming.</p>
 				<p class="p_">I enjoy procrastinating, exercising and listening to music.</p>
+				<p class="p_">I like contributing to free open source software and I like to create small qol improving projects.</p>
+				<p class="p_">I enjoy simple, old designs and mostly use monospace fonts for my projects. (this is probably due to nostalgia)</p>
 				<div class="main4">
 					<div class="main3">
 						<h1>Skills:</h1>
