--- a/html.html
+++ b/html.html
@@ -9,9 +9,9 @@
 		<title>Portfolio</title>
 		<style>
 			:root {
-				--background: #151515;
-				--text: #cccccc;
-				--accent: #e5b567;
+				--background: #2e3440;
+				--text: #d8dee9;
+				--accent: #5e81ac;
 			}
 			body {
 				background-color: var(--background);
@@ -52,6 +52,7 @@
 				word-wrap: break-word;
 			}
 			.main4 {
+				margin-top: 2rem;
 				display: flex;
 			}
 			.main3 > h1,
@@ -63,6 +64,7 @@
 
 			.list_el {
 				font-style: italic;
+				margin: 0.1rem;
 			}
 			.margin {
 				margin: 1rem;
@@ -101,8 +103,13 @@
 				<p class="p_">Hi, I'm Matteo, an 18-year-old student from Germany.</p>
 				<p class="p_">I'm interested in technologies and programming.</p>
 				<p class="p_">I enjoy procrastinating, exercising and listening to music.</p>
-				<p class="p_">I like contributing to free open source software and I like to create small qol improving projects.</p>
-				<p class="p_">I enjoy simple, old designs and mostly use monospace fonts for my projects. (this is probably due to nostalgia)</p>
+				<p class="p_">
+					I like contributing to free open source software and I like to create small qol improving projects.
+				</p>
+				<p class="p_">
+					I enjoy simple, old designs and mostly use monospace fonts for my projects. (this is probably due to
+					nostalgia)
+				</p>
 				<div class="main4">
 					<div class="main3">
 						<h1>Skills:</h1>
