--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Portfolio</title>
 	</head>
-	<body style="font-family: 'Courier New', monospace; font-size: 15pt; background-color: lightgray">
+	<body style="font-family: 'Courier New', monospace; color: #d8dee9; font-size: 15pt; background-color: #2e3440">
 		<div style="display: flex; align-items: center; justify-content: center; flex-direction: column">
 			<div style="margin-bottom: 1rem">
 				<span
 					>You are being redirected to xnacly's portfolio
-					<span style="font-style: italic; color: grey">(https://xnacly.me/)</span>, if that doesn't work,
+					<span style="font-style: italic; color: #5e81ac">(https://xnacly.me/)</span>, if that doesn't work,
 					click</span
 				>
-				<span><a style="color: black" href="https://xnacly.me/">here</a>...</span>
+				<span><a style="color: #5e81ac" href="https://xnacly.me/">here</a>...</span>
 			</div>
-			<span style="color: gray">[<a style="color: black" href="./html.html">html-porfolio</a>]</span>
+			<span>[<a style="color: #5e81ac" href="./html.html">html-porfolio</a>]</span>
 		</div>
 		<script>
 			setTimeout(() => {
